Fixed header on narrow widths

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,22 +6,26 @@
 }
 
 
+header {
+    padding: 0 0.5rem 0 0.5rem;
+}
+
+
 #header-top {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0 0 5px;
-    border-bottom: 1px solid #888;
+    padding: 0;
 }
 
 .title {
-    margin: 0;
+    margin: 0 2.5rem 0 0;
     font-size: 1.4rem;
     font-weight: bolder;
 }
 
 .subtitle {
-    margin: 0 0 0 2.5rem;
+    margin: 5px 0 5px;
     font-size: 1.0rem;
     font-weight: normal;
 }
@@ -36,7 +40,9 @@
 }
 
 nav {
+    border-top: 1px solid #888;
     padding-top: 5px;
+    margin-top: 10px;
 }
 
 nav a {
